assets/css/style.css
.container{
border:40px;
border-style:solid;
border-width: 10px;

border-color: #888;
}
#menu{
    display:flex;
    width: 100%;
   font-size: larger;
   /* border-style: solid; */
 background-color:#888;;
 justify-content: space-between;
 padding-bottom: 10px;
 }
 #myBtn{
    display: flex;
    border-style:inset;
    justify-content: center;
    font-size: larger;
    
    width:35px;
    
   
 background-color: #000000;

 
 border-color: rgb(165, 165, 165);


 }
 #myBtn:hover span{
    display: none;
 }
 #myBtn:hover:before{
    content: "?";
    color: red;
    
    font-size: 25px;
    
    
    
   


 
 border-color: rgb(165, 165, 165);
 }
.timer {
    display: flex;
    border-style:inset;
    justify-content: center;
    font-size: larger;
    
    width:35px;
    
    color: red;
 background-color: #000000;

 
 border-color: rgb(165, 165, 165);
  }
 #flags-left{
    display: flex;
    border-style:inset;
    justify-content: center;
    font-size: larger;
    
    width:35px;
    color: red;
   
 background-color: #000000;

 
 border-color: rgb(165, 165, 165);
 }
 
.main{
    display:grid;
    
    grid-template-rows:100vh;
    align-items:center;
    justify-content: center;
    
    -webkit-user-select: none; /* Safari */        
-moz-user-select: none; /* Firefox */
-ms-user-select: none; /* IE10+/Edge */
user-select: none; /* Standard */

}

.grid{
  
   
    display:flex;
    flex-wrap:wrap;
   
    width: 400px;
    height: 400px;
    background-color: rgb(173, 173, 173);
    text-align:center;
    line-height:2;
    color: rgb(255, 0, 0);
    font-weight: bold;
    font-size: larger;
}

.grid div{
    
    height:34px;
    width:34px;
    margin:1px;
    border-style:groove;
    border-top-color: rgb(238, 238, 238);
    border-right-color: rgb(153, 153, 153);
    border-bottom-color: rgb(153, 153, 153);
    border-left-color: rgb(238, 238, 238);
    padding: 0;
    margin: 0;
}
.checked{
    background-color: rgb(224, 224, 224);
    
}

.bomb {
   
}
.one{
    color: blue;
}
.two{
    color:green;
}
.three{
    color:red;
}
.four{
    color:purple;
}



 /* Modal Header */
 .modal-header {
    padding: 2px 16px;
    background-color: #5cb85c;
    
    text-align: center;
    color: white;
  }
  
  /* Modal Body */
  .modal-body {padding: 2px 16px;}
  
  /* Modal Footer */
  .modal-footer {
    display: flex;
    justify-content: space-between;
    padding: 2px 16px;
    background-color: #5cb85c;
    color: white;
  }
  
  /* Modal Content */
  .modal-content {
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
    display: inline-block;
    background-color: #00ff40;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 99%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    animation-name: animatetop;
    animation-duration: 0.4s;
    width: 400px;
   
    margin:0 auto;
   top: 0px;
    position: absolute;
    left: 0;
    right:0;
    justify-items: center;
    border:1px solid;
  }
  
  /* Add Animation */
  @keyframes animatetop {
    from {top: -200px; opacity: 0}
    to {top: 0px; opacity: 1}
  } 

